# project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.h  README  Untitled-2.cpp  app.cpp  app.h  app_start.cpp  app_start.h  app_state.h  camera.cpp  camera.h  capsule.glsl  circle.glsl  cpp.cpp  game_start.cpp  glad.c  global.h  grass2.vert  groundf.glsl  groundv.glsl  gui.cpp  gui.h  imgui.ini  input.cpp  input.h  oldgrass.vert  player.cpp  player.h  render.cpp  render.h  v_debug.glsl  vert.glsl  vert_ground.glsl  vert_inst_size.glsl  world.cpp  world.h
Assets/: bella.mtl  cube.mtl
GUI/: CMakeLists.txt  GUI.cpp  GUI.h
Graphics/: CMakeLists.txt  Graphics.cpp  Graphics.h  addAttributes.h  gizmos.cpp  gizmos.h  lights.h  primitives.cpp  primitives.h  shaders.cpp  shaders.h  shapes.h  vertex.h
Graphics/Models/: CMakeLists.txt  materials.h  meshes.cpp  meshes.h  models.cpp  models.h
Graphics/shaders/: basic.frag  camera.glsl  capsule.vert  debug.frag  frag_ground.glsl  grass.vert  grass2.vert  ground.frag  lights.glsl  scaled.vert  scene_lights.frag  sized.vert  transform.vert  vert_ground.glsl  vertex.vert
Graphics/shaders/not used/: old_grass_noisy.vert.unused
Render/: CMakeLists.txt  Render.cpp  Render.h  drawFunctions.h  drawLights.cpp  drawShapes.cpp
Weapons/: CMakeLists.txt  Weapons.cpp  Weapons.h  partenum.h  partnames.h  weaponparts.h
World/: CMakeLists.txt  World.cpp  World.h  loadmap.h  tools.h  worldCtx.h  worldLights.cpp  worldLights.h
World/maps/: map.json
graphics/: CMakeLists.txt  gizmos.cpp  gizmos.h  graphics.cpp  graphics.h  primitives.cpp  primitives.h  shaders.cpp  shaders.h
graphics/shaders/: capsule.glsl  circle.glsl  f_debug.glsl  frag.glsl  vert.glsl  vert_inst_scale.glsl
gui/: CMakeLists.txt  gui.cpp  gui.h
helper/: CMakeLists.txt  jsonHelper.cpp  jsonHelper.h
include/glad/: glad.h
physics/: CMakeLists.txt  colliders.cpp  colliders.h  collisions.cpp  collisions.h
player/: CMakeLists.txt  player.cpp  player.h  playerCtx.h
shaders/: vert.glsl
weapon/: CMakeLists.txt  weapon.cpp  weapon.h  weaponEventQueue.h
world/: CMakeLists.txt  loadmap.h  world.cpp  world.h  worldCtx.h
